feat: update allowed origins and add access token handling in payment form

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=5002
 NODE_ENV=production
 INTERNAL_API_KEY=ETiPhW0E60m2jl5nyFK0iA
 
-ALLOWED_ORIGINS="http://localhost:3000, http://127.0.0.1:5500, http://localhost:3002"
+ALLOWED_ORIGINS="http://localhost:5500, http://127.0.0.1:5500, http://localhost:3002, http://127.0.0.1:5500, http://localhost:5173, http://127.0.0.1:5173"
 # DATABASE_URL="postgresql://postgres:Rot%402112002@localhost:5432/payment_db?schema=public"
 DATABASE_URL="postgresql://postgres:Rot%402112002@payment-db:5432/payment_db?schema=public"
 FRONT_END_URL="http://localhost:5500"
@@ -22,6 +22,11 @@ CACHE_TTL=3600
 USER_SERVICE_URL="http://ums-api-1:5003/api/v1/ums"
 PROGRESS_SERVICE_URL="http://progress-api-1:5004/api/v1/progress"
 COURSE_SERVICE_URL="http://cms-api-1:5008/api/v1/cms"
+
+# USER_SERVICE_URL="http://18.184.52.10:5003/api/v1/ums"
+# PROGRESS_SERVICE_URL="http://18.184.52.10:5004/api/v1/progress"
+# COURSE_SERVICE_URL="http://18.184.52.10:5008/api/v1/cms"
+
 
 
 PLATFORM_COMMISSION_PERCENTAGE=20
